# todoapp_aipowered

./: .gitignore  README.md
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env.example  README.md  ai.py  ai_tools.py  database.py  main.py  pyproject.toml  requirements.txt  settings.py
backend/auth/: jwt.py
backend/dependencies/: auth.py
backend/mcp_server/: README.md  __init__.py  config.py  requirements.txt  server.py  start_server.py  tool_utils.py  utils.py
backend/mcp_server/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  incomplete_task.py  list_tasks.py  update_task.py
backend/models/: chat.py  conversation.py  task.py  user.py
backend/routes/: auth.py  conversation.py  oauth.py  tasks.py  users.py
backend/schemas/: task_schemas.py  user_schemas.py
backend/services/: chat_service.py  nlp_task_service.py  oauth_service.py  task_service.py  user_service.py
backend/tests/: test_auth.py  test_tasks.py
backend/utils/: errors.py  event_broadcaster.py  logging.py
frontend/: .env.example  README.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: DeleteConfirmModal.tsx  Feedback.tsx  useTasks.ts
frontend/lib/: api.ts  auth-client.ts  auth.tsx  chatApi.ts  storage.ts
specs/002-ai-chatbot-interface/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-mcp-server-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+35 files in other folders)
